--- a/KindNest/Base.lproj/Main.storyboard
+++ b/KindNest/Base.lproj/Main.storyboard
@@ -27,7 +27,6 @@
                                 </state>
                                 <connections>
                                     <action selector="fbLogin:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Zvv-pG-7q8"/>
-                                    <segue destination="ant-Qc-KLH" kind="show" identifier="goToMap" id="Oun-aI-VYw"/>
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" alpha="0.90000000000000002" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="KindNest" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eDy-d0-Epa">
@@ -47,12 +46,15 @@
                             <constraint firstAttribute="centerX" secondItem="eDy-d0-Epa" secondAttribute="centerX" id="hH3-Wb-Zsa"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <segue destination="eea-eQ-lq4" kind="show" identifier="goToMap" id="qUi-HA-xkR"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="680" y="543"/>
         </scene>
-        <!--Map View Controller-->
+        <!--Map-->
         <scene sceneID="LTN-fF-xM0">
             <objects>
                 <viewController id="ant-Qc-KLH" customClass="MapViewController" customModule="KindNest" customModuleProvider="target" sceneMemberID="viewController">
@@ -64,32 +66,95 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="n94-7Z-4BN">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="n94-7Z-4BN">
+                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                                 <connections>
                                     <outlet property="delegate" destination="ant-Qc-KLH" id="1Ze-R5-1PY"/>
                                 </connections>
                             </mapView>
-                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="hdI-Ts-kI9">
-                                <rect key="frame" x="0.0" y="556" width="600" height="44"/>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Opo-gJ-heh">
+                                <rect key="frame" x="0.0" y="20" width="600" height="44"/>
                                 <items>
-                                    <barButtonItem title="Item" id="LBF-kT-d06"/>
-                                </items>
-                            </toolbar>
-                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Opo-gJ-heh">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
-                                <items>
-                                    <navigationItem title="Title" id="YBA-PP-fxW"/>
+                                    <navigationItem title="KINDNEST" id="YBA-PP-fxW"/>
                                 </items>
                             </navigationBar>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="hzn-Z3-rZt">
-                                <rect key="frame" x="537" y="50" width="57" height="44"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="hzn-Z3-rZt">
+                                <rect key="frame" x="532" y="69" width="60" height="60"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="Shf-Fm-2cB"/>
+                                    <constraint firstAttribute="width" constant="52" id="Zxf-2P-mTg"/>
+                                </constraints>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="n94-7Z-4BN" firstAttribute="trailing" secondItem="Opo-gJ-heh" secondAttribute="trailing" id="6GD-Nw-SzY"/>
+                            <constraint firstItem="n94-7Z-4BN" firstAttribute="leading" secondItem="Opo-gJ-heh" secondAttribute="leading" id="ARL-HA-Syc"/>
+                            <constraint firstAttribute="trailing" secondItem="Opo-gJ-heh" secondAttribute="trailing" id="JWO-eq-oc4"/>
+                            <constraint firstItem="n94-7Z-4BN" firstAttribute="top" secondItem="Opo-gJ-heh" secondAttribute="bottom" id="Jf4-Xw-dfV"/>
+                            <constraint firstItem="n94-7Z-4BN" firstAttribute="bottom" secondItem="RmG-jk-8gQ" secondAttribute="top" id="LLp-Xg-MoT"/>
+                            <constraint firstItem="Opo-gJ-heh" firstAttribute="top" secondItem="UWX-3V-bmq" secondAttribute="bottom" id="Nud-GB-AuB"/>
+                            <constraint firstItem="Opo-gJ-heh" firstAttribute="leading" secondItem="zAA-eO-L9a" secondAttribute="leading" id="byx-Yd-yEY"/>
+                            <constraint firstItem="hzn-Z3-rZt" firstAttribute="trailing" secondItem="zAA-eO-L9a" secondAttribute="trailingMargin" id="sqz-8z-BQ5"/>
+                            <constraint firstItem="hzn-Z3-rZt" firstAttribute="top" secondItem="Opo-gJ-heh" secondAttribute="bottom" constant="5" id="tdU-sz-0aX"/>
+                        </constraints>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Map" id="nTc-gp-bji"/>
+                    <connections>
+                        <outlet property="currentPhoto" destination="hzn-Z3-rZt" id="uOB-ti-nsL"/>
+                        <outlet property="userMap" destination="n94-7Z-4BN" id="WJC-23-WaK"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ox5-Xk-MRW" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2203" y="538"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="a3S-9r-qtY">
+            <objects>
+                <viewController id="DH4-sd-xvz" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="8co-YO-oQc"/>
+                        <viewControllerLayoutGuide type="bottom" id="Ok4-yZ-G8G"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="BRo-Ou-Irm">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SgE-b3-efA">
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="8jP-J6-EQo">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="551"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" systemItem="more" id="dQA-5G-1RL"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="LUW-G3-urI" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2203" y="1240"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="rA3-H0-8nM">
+            <objects>
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="eea-eQ-lq4" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <nil key="simulatedBottomBarMetrics"/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="eQi-Yk-aEX">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="ant-Qc-KLH" kind="relationship" relationship="viewControllers" id="hNf-v8-7Dq"/>
+                        <segue destination="DH4-sd-xvz" kind="relationship" relationship="viewControllers" id="Kx6-Vh-r0p"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="2iQ-0y-7pD" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1391" y="538"/>
         </scene>
