--- a/KindNest/Base.lproj/Main.storyboard
+++ b/KindNest/Base.lproj/Main.storyboard
@@ -47,14 +47,14 @@
                         </constraints>
                     </view>
                     <connections>
-                        <segue destination="eea-eQ-lq4" kind="show" identifier="goToMap" id="qUi-HA-xkR"/>
+                        <segue destination="ant-Qc-KLH" kind="show" identifier="goToMap" id="NwE-MO-INA"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="680" y="543"/>
+            <point key="canvasLocation" x="656" y="536"/>
         </scene>
-        <!--Map-->
+        <!--Map View Controller-->
         <scene sceneID="LTN-fF-xM0">
             <objects>
                 <viewController id="ant-Qc-KLH" customClass="MapViewController" customModule="KindNest" customModuleProvider="target" sceneMemberID="viewController">
@@ -66,12 +66,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="n94-7Z-4BN">
-                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
-                                <connections>
-                                    <outlet property="delegate" destination="ant-Qc-KLH" id="1Ze-R5-1PY"/>
-                                </connections>
-                            </mapView>
                             <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Opo-gJ-heh">
                                 <rect key="frame" x="0.0" y="20" width="600" height="44"/>
                                 <items>
@@ -85,21 +79,27 @@
                                     <constraint firstAttribute="width" constant="52" id="Zxf-2P-mTg"/>
                                 </constraints>
                             </imageView>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="n94-7Z-4BN">
+                                <rect key="frame" x="0.0" y="64" width="600" height="487"/>
+                                <connections>
+                                    <outlet property="delegate" destination="ant-Qc-KLH" id="G2Z-jU-vhF"/>
+                                </connections>
+                            </mapView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="n94-7Z-4BN" firstAttribute="trailing" secondItem="Opo-gJ-heh" secondAttribute="trailing" id="6GD-Nw-SzY"/>
-                            <constraint firstItem="n94-7Z-4BN" firstAttribute="leading" secondItem="Opo-gJ-heh" secondAttribute="leading" id="ARL-HA-Syc"/>
+                            <constraint firstItem="n94-7Z-4BN" firstAttribute="top" secondItem="Opo-gJ-heh" secondAttribute="bottom" id="C4f-Uf-9A5"/>
                             <constraint firstAttribute="trailing" secondItem="Opo-gJ-heh" secondAttribute="trailing" id="JWO-eq-oc4"/>
-                            <constraint firstItem="n94-7Z-4BN" firstAttribute="top" secondItem="Opo-gJ-heh" secondAttribute="bottom" id="Jf4-Xw-dfV"/>
-                            <constraint firstItem="n94-7Z-4BN" firstAttribute="bottom" secondItem="RmG-jk-8gQ" secondAttribute="top" id="LLp-Xg-MoT"/>
                             <constraint firstItem="Opo-gJ-heh" firstAttribute="top" secondItem="UWX-3V-bmq" secondAttribute="bottom" id="Nud-GB-AuB"/>
                             <constraint firstItem="Opo-gJ-heh" firstAttribute="leading" secondItem="zAA-eO-L9a" secondAttribute="leading" id="byx-Yd-yEY"/>
+                            <constraint firstItem="n94-7Z-4BN" firstAttribute="bottom" secondItem="RmG-jk-8gQ" secondAttribute="top" id="cPh-p9-Z3p"/>
+                            <constraint firstItem="n94-7Z-4BN" firstAttribute="leading" secondItem="Opo-gJ-heh" secondAttribute="leading" id="jar-pa-HyT"/>
+                            <constraint firstItem="n94-7Z-4BN" firstAttribute="trailing" secondItem="Opo-gJ-heh" secondAttribute="trailing" id="pYI-w6-2z8"/>
                             <constraint firstItem="hzn-Z3-rZt" firstAttribute="trailing" secondItem="zAA-eO-L9a" secondAttribute="trailingMargin" id="sqz-8z-BQ5"/>
                             <constraint firstItem="hzn-Z3-rZt" firstAttribute="top" secondItem="Opo-gJ-heh" secondAttribute="bottom" constant="5" id="tdU-sz-0aX"/>
                         </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Map" id="nTc-gp-bji"/>
+                    <tabBarItem key="tabBarItem" systemItem="favorites" id="zAy-zh-xR4"/>
                     <connections>
                         <outlet property="currentPhoto" destination="hzn-Z3-rZt" id="uOB-ti-nsL"/>
                         <outlet property="userMap" destination="n94-7Z-4BN" id="WJC-23-WaK"/>
@@ -107,7 +107,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ox5-Xk-MRW" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2203" y="538"/>
+            <point key="canvasLocation" x="1470" y="536"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="a3S-9r-qtY">
@@ -137,30 +137,33 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="LUW-G3-urI" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2203" y="1240"/>
+            <point key="canvasLocation" x="1470" y="1289"/>
         </scene>
         <!--Tab Bar Controller-->
-        <scene sceneID="rA3-H0-8nM">
+        <scene sceneID="ph2-fs-ihQ">
             <objects>
-                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="eea-eQ-lq4" sceneMemberID="viewController">
-                    <toolbarItems/>
+                <tabBarController id="JYB-wH-Xur" sceneMemberID="viewController">
                     <nil key="simulatedBottomBarMetrics"/>
-                    <tabBar key="tabBar" contentMode="scaleToFill" id="eQi-Yk-aEX">
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="Gmv-oT-5iP">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </tabBar>
                     <connections>
-                        <segue destination="ant-Qc-KLH" kind="relationship" relationship="viewControllers" id="hNf-v8-7Dq"/>
-                        <segue destination="DH4-sd-xvz" kind="relationship" relationship="viewControllers" id="Kx6-Vh-r0p"/>
+                        <segue destination="ant-Qc-KLH" kind="relationship" relationship="viewControllers" id="l0K-pH-B9x"/>
+                        <segue destination="DH4-sd-xvz" kind="relationship" relationship="viewControllers" id="3ER-nF-ffO"/>
                     </connections>
                 </tabBarController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="2iQ-0y-7pD" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="CAk-lf-e1s" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1391" y="538"/>
+            <point key="canvasLocation" x="2196" y="863"/>
         </scene>
     </scenes>
     <resources>
         <image name="Vk9SO" width="300" height="46"/>
         <image name="kindness-heart-image-orgspring" width="1600" height="900"/>
     </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="l0K-pH-B9x"/>
+    </inferredMetricsTieBreakers>
 </document>
